--- a/views/account.erb
+++ b/views/account.erb
@@ -1,3 +1,16 @@
-<turbo-frame id="accounts">
-  Fetching transactions for accounts <%= @account_id %>
+<turbo-stream action="replace" target="account">
+  <template>
+    <p>Fetching transactions for and asking Buffet for advice.</p>
+    <p id="advice"></p>
+    <script>
+      const evtSource = new EventSource("account/<%= @account_id %>/advice")
+      const targetDiv = document.getElementById("advice");
+      evtSource.addEventListener("close", (event) => {
+        evtSource.close()
+      });
+      evtSource.onmessage = (event) => {
+        targetDiv.append(event.data);
+      };
+    </script>
+  </template>
 </turbo-frame>
