--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
   <script type="module">
     import * as Turbo from 'https://cdn.jsdelivr.net/npm/@hotwired/turbo@8.0.10/+esm';
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
     .turbo-progress-bar {
       height: 10px;
