Add a delete session button

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,7 @@
       background-color: green;
     }
   </style>
-  <title>Wireframe - Contact</title>
+  <title>Warren</title>
 </head>
 <body>
   <main>
@@ -31,6 +31,9 @@
         loading account data...
       </turbo-frame>
     <% end %>
+    <div>
+      <a href="/delete_session" data-turbo="false">delete session</a>
+    </div>
   </main>
 </body>
 </html>
